Aligned and finished browse and corrected code.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
 Justin Tilley
-Project 4
-VFW Term 1210
+Project 1
+MIU Term 1211
 */
 
 body{
@@ -39,6 +39,10 @@ fieldset{
 	border: 1px dashed blue;
 }
 
+fieldset ul{
+	list-style: none;
+}
+
 #radios{
 	list-style-type: none;
 }
@@ -49,7 +53,6 @@ fieldset{
 
 #make{
 	margin-left: 8px;
-
 }
 
 #groups{
@@ -65,7 +68,6 @@ fieldset{
 
 #comments{
 	margin-left: 40px;
-
 }
 
 #submit{
@@ -101,11 +103,8 @@ div ul li{
 	list-style: none;
 }
 
-div ul li ul li > a{
+div ul li ul li a{
 	line-height: 30px;
-}
-
-#add{
 	border: 1px solid black;
 	border-radius: 10px;
 	background: #D6D5E3;
@@ -114,37 +113,46 @@ div ul li ul li > a{
 }
 
 #browse {
+	text-align: center;
+}
+
+#browse ul{
+	width: 100%;
 	padding: 0px;
 	margin: 0px;
-	list-style: none;
-	text-align: center;
-	color: blue;
 }
+
 #browse li{
 	border-bottom: 1px solid #99CCFF;
 	border-top: 1px solid #99CCFF;
     padding: 7px 12px;
 	background-image: -webkit-gradient(radial, center center, 0, center center, 180, color-stop(0, #FFFFFF), color-stop(1, #035FFF));
-
+	background-image: -moz-radial-gradient(center, circle closest-corner, #FFFFFF 0%, #0035FF 100%);
+	list-style: none;
 }
+
 #browse li a{
 	color: #343536;
 	font-size: 20px;
     font-weight: 600;
 }
+
 #searchbox{
 	padding: 10px;
 }
+
 #search{
 	font-size: 12px;
     color: #999;
     padding: 4px 10px 5px 30px;
     width: 140px;
     border: 1px solid gray;
+    border-radius: 10px;
 }
 
 #searchsubmit{
 	border: 1px solid #00748f;
+	border-radius: 10px;
 	height: 28px;
 	width: 65px;
 }
